--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 .main{
     width: 100%;
     overflow: auto;
@@ -15,7 +16,24 @@
     margin-top: 20%;
 }
 
+.video{
+    border: 1px solid black;
+    padding: 35px;
+    margin: 50px;
+    margin-top: 5%;
+    width: 70%
+}
+
 .right-panel{
     float: right;
+    width: 60%
+}
+
+.painting-img{
+    border: 1px solid black;
+    padding: 35px;
+    margin: 50px;
+    margin-left: 20%;
+    width: 40%
 }
 
